--- a/get_user_profile/package.json
+++ b/get_user_profile/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^18.15.5",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
+  },
+  "dependencies": {
+    "daisyui": "^2.51.5"
   }
 }
